--- a/LAB6_IOT_20193470/app/build.gradle
+++ b/LAB6_IOT_20193470/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
 }
