--- a/LAB6_IOT_20193470/app/src/main/AndroidManifest.xml
+++ b/LAB6_IOT_20193470/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/piggybankuwu"
+        android:icon="@drawable/piggybankpic"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/piggybankpic"
         android:supportsRtl="true"
         android:theme="@style/Theme.LAB6_IOT_20193470"
         tools:targetApi="31">
@@ -22,7 +22,23 @@
             android:exported="false"/>
 
         <activity
+            android:name=".DetalleIngresoActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".EditarIngresoActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".NuevoEgresoActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".DetalleEgresoActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".EditarEgresoActivity"
             android:exported="false"/>
 
         <activity
